--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <p class="hi-im-abhinav">🚀 Freelancing & Entrepreneurship</p>
                 <p class="hi-im-abhinav">I'm also stepping into the freelancing world, offering my web development skills on platforms like Upwork and Fiverr. Additionally, I've started "Yatra", a brand inspired by the concept of life's journey, which I aim to expand into something meaningful.</p>
                 <p class="hi-im-abhinav">🎮 Hobbies & Interests</p>
-                <p class="hi-im-abhinav">Outside of coding, I enjoy playing outdoor gamescl, exploring new tech, and working on innovative ideas. I also have a keen interest in branding, design, and problem-solving.</p>
+                <p class="hi-im-abhinav">Outside of coding, I enjoy playing outdoor games, exploring new tech, and working on innovative ideas. I also have a keen interest in branding, design, and problem-solving.</p>
                 <p class="im-always-open">I'm always open to learning, collaborating, and discussing new projects, freelancing, and tech ideas. If you're working on something exciting or need assistance, let's connect! 🚀</p>
             </div>
             <div class="button-primary">
