--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             window.open("https://www.linkedin.com/in/abhinav-chhetri-a23963298/", "_blank");
         });
         document.getElementById("vuesaxboldfacebookIcon").addEventListener("click", function() {
-            window.open("https://www.facebook.com/abhioooob", "_blank");
+            window.open("https://www.facebook.com/chhetriabhinav", "_blank");
         });
     </script>
 </body>
